--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,10 +5,9 @@
     <title>Your path. .  .</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
+
 </head>
-
-    <div class="page-header">
-        <h1>The P a t  h </h1>
-    </div>
-
-<body id= "firstbody">
+<div class="page-header">
+    <p>The P a t  h </p>
+</div>
