--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,36 @@
 .page-header {
-  font-size: 80px; 
+  font-size: 100px; 
   text-align: center;
   background-color: transparent;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
-h1{
+#paths {
+  font-family: 'Patrick Hand SC', cursive;
+  font-size: 3em;
+}
+
+#hey{
   text-align: center;
+  font-size: 50px;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
-h3{
-  margin: 200px;
+#heyo{
+  margin: 250px;
+  font-size: 3em;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
-h4 {
+#heyoy {
   float: right;
   margin: 50px;
-  padding: 150px;
+  padding: 15px;
+  font-size: 3em;
+  font-family: 'Patrick Hand SC', cursive;
+  color: #1919a9;
 }
+
 .sidenav {
   height: 100%;
   width: 0;
@@ -28,19 +42,23 @@ h4 {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  font-family: 'Patrick Hand SC', cursive;
+
 }
 
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 40px;
   color: #818181;
   display: block;
   transition: 0.3s;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
 .sidenav a:hover {
   color: #f1f1f1;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
 .sidenav .closebtn {
@@ -54,6 +72,7 @@ h4 {
 #main {
   transition: margin-left .5s;
   padding: 16px;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
 @media screen and (max-height: 450px) {
@@ -64,106 +83,114 @@ h4 {
 .marquee {
   font-size: 3em;
   white-space: nowrap;
-  -webkit-animation: rightThenLeft 4s linear;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
-#paths {
-  font-size: 3em;
-  color: black;
+#insertm{
+  font-size: 1em;
+  padding: 15px;
+  font-family: 'Patrick Hand SC', cursive;
+  outline: 0;
 }
 
-#userinput, #passinput, #offlinenav, #register, #enteru, #entere, #enterp, #saveall, #saveall1, #saveall2, #saveall3{
+#userinput, #passinput, #followbutton, #loginbutton, #registerbutton, #offlinenav, #register, #enteru, #entere, #enterp, #saveall, #saveall1, #saveall2, #saveall3, #saveall4, #saveall5, #saveall6, #saveall7, #saveall8{
   border-radius: 25px;
+  outline: 0;
+  height: 50px;
+  font-size: 20px;
+  color: black;
+  background-color: rgb(236, 234, 234); 
+  font-family: 'Patrick Hand SC', cursive;
 }
 
-#sad{
-  background-color: beige;
-  color: black;
+#sad, #addm, #inputForm {
+  border-radius: 25px;
+  outline: 0;
+  height: 25px;
+  font-size: 20px;
+  background-color: rgb(236, 234, 234); 
+  font-family: 'Patrick Hand SC', cursive;
 }
+
 
 .lovelyform, #regform {
   text-align: center;
-  
+  font-family: 'Patrick Hand SC', cursive;
+  outline: 0;
+}
+
+#definepath {
+  background-color: transparent;
+  font-family: 'Patrick Hand SC', cursive;
+  text-align: center;
+  width: 1500px;
+  outline: 0;
+}
+
+#h2{
+  font-size: 50px;
+}
+
+/* #Goal{
+  border-radius: 25px;
+  height: 60px;
+  width: 500px;
+  font-size: 20px;
+}
+ */
+.bg {
+  background-image: url(/images/thepath1.png);
+  background-size: 1550px 800px;
+  background-color: beige;
+  background-repeat: no-repeat;
 }
 
 #firstbody {
   background-image: url(/images/thepath1.png);
-  background-size: 1350px 700px;
+  background-size: 1550px 800px;
   background-color: beige;
-}
-
-
-#body {
-  background-image: url(/images/thepath.png);
-  background-size: 1500px 700px;
-  background-color: beige;
-}
-
-#addm{
-  background-color: beige;
-  border-color: beige;
-  color: beige;
+  background-repeat: repeat-x;
+  width: 350em;
+  display: inline-block;
+  vertical-align: top;
 }
 
 #milestoned{
-display: inline-block;
-float: left;
+  font-size: 2em;
+  font-family: 'Patrick Hand SC', cursive;
+  color: #1919a9;
 }
 
-#milestone{
-  bottom: -100px;
-}
-
-#milestone1{
-right: 250px;
-}
-
-#milestone2{
-  bottom: 25em;
-  line-height: 150px;
-}
-
-#milestone3{
-}
-  
-#milestone4{
-  float: left;
-}
-
-#milestone5{
-  float: left;
-}
-
-#milestone6{
-  float: left;
-}
-
-#milestone7{
-  float: left;
-}
-
-
- #milestone, #milestone1, #milestone2, #milestone3, #milestone4, #milestone5, #milestone6, #milestone7 {
+#milestone, #milestone1, #milestone2, #milestone3, #milestone4, #milestone5, #milestone6, #milestone7 {
     float: left;
-    display: inline;
+    display: inline-block;
+    margin: 130px;
     display: none;
+    outline: 0;
 } 
 
+.btn-primary {
+  color: #fff;
+  background-color:transparent;
+  border-color: transparent;
+}
 
-.form, .form1, .form2, .form3{
+.form, .form1, .form2, .form3, .form4, .form5, .form6, .form7, .form8{
   display: none;
   float: left;
-  width: 50%;
+  width: 10%;
   height: 40em;
   padding: 20px;
   margin: -140px;
   border-radius: 25px;
-  background-color: beige;
+  background-color: rgb(222, 229, 231);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-family: 'Patrick Hand SC', cursive;
+  outline: 0;
 }
 
-#txt, #txt1, #txt2, #txt3{
-    width: 60%;
+#txt, #txt1, #txt2, #txt3, #txt4, #txt5, #txt6, #txt7, #txt8{
+    width: 80%;
     height: 25em;
     padding: 12px 20px;
     box-sizing: border-box;
@@ -172,17 +199,8 @@ right: 250px;
     background-color: #f8f8f8;
     font-size: 16px;
     resize: none;
+    font-family: 'Patrick Hand SC', cursive;
+    outline: 0;
 }
 
-
-.hoscroll {
-  white-space: nowrap;
-}
-
-img.lazy {
-  width: 150em; 
-  height: 0em; 
-  display: inline-block;
-  color: transparent;
-} 
 
