--- a/views/allpaths.ejs
+++ b/views/allpaths.ejs
@@ -1,4 +1,7 @@
 <% include ./partials/header%>
+
+<body class="bg">
+
 <% include ./partials/navbar%>
 <ul>
             <% allTimelines.forEach( (timeline) => { %>
