--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
 <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <li id= "createl"><a href="/create">Find a Path</a></li>
-        <li id= "logoutl"><a href="/logout">Log Out</a></li>
-        <li id= "allpathsl"><a href="/myallpaths">All Paths</a></li>
+        <a href="/create">Create a Path</a>
+        <a href="/logout">Log Out</a>
+        <a href="/myallpaths">All Paths</a>
 </div>
       
 <div id="main">
@@ -11,7 +11,7 @@
       
       <script>
       function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("mySidenav").style.width = "350px";
         document.getElementById("main").style.marginLeft = "250px";
       }
       
