--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,11 @@
 <% include ./partials/header%>
+<body class="bg">
 <% include ./partials/offlinenavbar%>
 <form id= "regform" form action="/register" method="post">
 <input id= "enteru" type="text" placeholder="Username" name="username" required>
 <input id= "entere" type="text" placeholder="Email" name="email" required>
 <input id= "enterp" type="password" placeholder="Password" name="password" required>
-<button type="submit">Login</button>
+<br>
+<button id= "registerbutton" type="submit">Login</button>
 </form>
 <% include ./partials/footer%>
