--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,13 +131,14 @@
   font-size: 50px;
 }
 
-/* #Goal{
+#createsth{
   border-radius: 25px;
   height: 60px;
   width: 500px;
   font-size: 20px;
+  outline: 0;
 }
- */
+
 .bg {
   background-image: url(/images/thepath1.png);
   background-size: 1550px 800px;
